# fishengine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
assets/lua/main/: console.lua  test.lua
assets/models/: gome.mtl  scene.gltf  spherescene.mtl  sponza.mtl
assets/shaders/2D_Panel/: shader.vert
assets/shaders/3D_GeoPass/: shader.frag  shader.vert
assets/shaders/3D_LightPass/: shader.frag  shader.vert
assets/shaders/3D_Lit/: shader.frag  shader.vert
assets/shaders/Libraries/: lights.glsl  math.glsl
common/: CMakeLists.txt
common/include/fish/: common.hpp  version.hpp
engine/: CMakeLists.txt
engine/include/fish/: assets.hpp  camera.hpp  console.hpp  engine.hpp  engineinfo.hpp  events.hpp  game.hpp  glsl.hpp  helpers.hpp  imguisystem.hpp  lights.hpp  material.hpp  mesh.hpp  model.hpp  node.hpp  property.hpp  renderer.hpp  scenes.hpp  services.hpp  shaders.hpp  system.hpp  texture.hpp  transform.hpp  ui.hpp  userinput.hpp  world.hpp
engine/src/: asset.cpp  assets.cpp  assimpio.cpp  console.cpp  engine.cpp  events.cpp  game.cpp  glsl.cpp  imgui.cpp  render2d.cpp  render3d.cpp  renderer.cpp  sceneloader.cpp  screen.cpp  shadercache.cpp  shaders.cpp  texture.cpp  ui.cpp  userinput.cpp  world.cpp
runtime/: CMakeLists.txt
runtime/include/fish/: lua.hpp  runtime.hpp  runtimesystem.hpp
runtime/include/fish/lua/: luaevents.hpp  luamath.hpp  luascene.hpp  luaworld.hpp
runtime/src/: lua.cpp  main.cpp  runtime.cpp  runtimesystem.cpp
runtime/src/lua/: luaevents.cpp  luaimgui.cpp  luamath.cpp  luascene.cpp  luaworld.cpp
